# XEL

./: .gitignore  CMakeLists.txt  EvaluateNode.cpp  EvaluateNode.h  FormulaContext.cpp  FormulaContext.h  FormulaEngine.cpp  FormulaEngine.h  FormulaEngine.pro  FormulaError.cpp  FormulaError.h  NodeCreator.cpp  NodeCreator.h  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  README.md  SharedData.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Variant.cpp  Variant.h  XEL.pro  XELContext.cpp  XELContext.h  XELEngine.cpp  XELEngine.h  XELError.cpp  XELError.h  XHashMap.h  XString.cpp  XString.h  appveyor.yml  formulaengine_global.h  xel_global.h
XEL/: EvaluateNode.cpp  EvaluateNode.h  Expression.cpp  Expression.h  NodeCreator.cpp  NodeCreator.h  Parser.cpp  Parser.h  Preprocessor.h  SharedData.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  Variant.cpp  Variant.h  XELContainerObject.cpp  XELContainerObject.h  XELContext.cpp  XELContext.h  XELEngine.cpp  XELEngine.h  XELError.cpp  XELError.h  XELFunctions.cpp  XELFunctions.h  XELNumber.cpp  XELNumber.h  XELObject.cpp  XELObject.h  XELUtils.cpp  XELUtils.h  XELValOrVar.cpp  XELValOrVar.h  XHashMap.h  XString.cpp  XString.h  xel_global.h
test/: appveyor.helper.py  test.cpp
